@@ -1,3 +1,14 @@
+2015-01-06  Vincent Celier  <celier@adacore.com>
+
+	* prj-env.adb: Minor comment update.
+
+2015-01-06  Javier Miranda  <miranda@adacore.com>
+
+	* sem_res.adb (Valid_Conversion): Restrict the checks on anonymous
+	access types whose target type is an interface type to operands
+	that are access types; required to report an error when the
+	operand is not an access type.
+
 2015-01-06  Bob Duff  <duff@adacore.com>
 
 	* a-cfinve.adb (Copy): Set the discriminant to the Length when
@@ -12,6 +23,7 @@
 2015-01-06  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_ch12.adb: Code clean up.
+
 2015-01-06  Arnaud Charlet  <charlet@adacore.com>
 
 	* gnatvsn.ads: Bump copyright year.
